@@ -1,0 +1,3 @@
+`line 1 "obj_vlt/t_lint_eofline/t_lint_eofline_bad.v" 1
+
+`line 2 "obj_vlt/t_lint_eofline/t_lint_eofline_bad.v" 2
